--- a/homework/unit_11/homework_submission.Rmd
+++ b/homework/unit_11/homework_submission.Rmd
@@ -16,6 +16,8 @@ library(ggplot2)
 library(dplyr)
 library(fpp2)
 library(MuMIn)
+library(xts)
+library(dygraphs)
 
 dbxroot <- "https://dl.dropboxusercontent.com/spa/afq05cp80hp4ezn/downloads/public/msds-data/"
 ```
@@ -32,6 +34,9 @@ read_chunk('code/q02_b.R')
 read_chunk('code/q02_c.R')
 read_chunk('code/q02_d.R')
 read_chunk('code/q03_a.R')
+read_chunk('code/q03_b.R')
+read_chunk('code/q03_c.R')
+read_chunk('code/q03_d.R')
 
 ```
 
@@ -85,12 +90,34 @@ read_chunk('code/q03_a.R')
 Based on the info from [Wikipedia on AICc](https://en.wikipedia.org/wiki/Akaike_information_criterion), the one with the smaller value is the better fitting model.  Thus, the SES model is the better model.
 
 
-## 2) The Wands Choose the Wizard
+## 3) The Wands Choose the Wizard
 ### (a.) Utilize the dygraphs library. Read in both Unit11TimeSeries_Ollivander and _Gregorovitch.csv as two different data frames. They do not have headers, so make sure you account for that. This is a time series of Wands sold over years.
 ```{r}
 <<q03_a>>
 ```
 
+### (b.) You don’t have your information in the proper format! In both data sets, you’ll need to first convert the date-like variable to an actual Date class
+```{r}
+<<q03_b>>
+```
+
+### (c.) Use the library xts (and the xts() function in it) to make each data frame an xts object (effectively, a time series). You’ll want to order.by the Date variable.
+```{r}
+<<q03_c>>
+```
+
+### (d.) Bind the two xts objects together and create a dygraph from it.
+
+* Give an effective title and x/y axes.
+* Label each Series (via dySeries) to be the appropriate wand-maker. So, one line should create a label for Ollivander and the other for Gregorovitch.
+* Stack this graph and modify the two lines to be different colors (and not the default ones!) Any colors are fine, but make sure they’re visible and that Ollivander is a different color than Gregorovitch.
+* Activate a range selector and make it big enough to view.
+* Use dyShading to illuminate approximately when Voldemort was revived and at-large: between 1995 to 1999.
+* Enable Highlighting on the graph, so mousing over a line bolds it.
+
+```{r}
+<<q03_d>>
+```
 
 ## [Upload to GitHub](https://github.com/allthebits/mjk-msds6306)
 - Files for this homework (Unit 10) are in this folder: **homework/unit_11**
